From now, there are two states on navigation: manual and dynamic. Dynamic nav stops when user starts switching sections manually by clicking on the nav items.

--- a/templates/sections/main_navigation.html
+++ b/templates/sections/main_navigation.html
@@ -4,10 +4,10 @@
 		<div class="nav-wrapper">
 			<nav class="main-navigation">
 				<ul>
-					<li class="nav-item nav-item-welcome main-nav"><a href="#welcome">welcome</a></li>
-					<li class="nav-item nav-item-portfolio main-nav"><a href="#portfolio">portfolio</a></li>
-					<li class="nav-item nav-item-testimonials main-nav"><a href="#testimonials">testimonials</a></li>
-					<li class="nav-item nav-item-connect main-nav"><a href="#connect">connect</a></li>
+					<li class="nav-item main-nav-item"><a href="#welcome">welcome</a></li>
+					<li class="nav-item main-nav-item"><a href="#portfolio">portfolio</a></li>
+					<li class="nav-item main-nav-item"><a href="#testimonials">testimonials</a></li>
+					<li class="nav-item main-nav-item"><a href="#connect">connect</a></li>
 				</ul>
 			</nav>
 		</div>
