--- a/templates/sections/main_navigation.html
+++ b/templates/sections/main_navigation.html
@@ -4,10 +4,9 @@
 		<div class="nav-wrapper">
 			<nav class="main-navigation">
 				<ul>
-					<li class="nav-item main-nav-item"><a href="#welcome">welcome</a></li>
-					<li class="nav-item main-nav-item"><a href="#portfolio">portfolio</a></li>
-					<li class="nav-item main-nav-item"><a href="#testimonials">testimonials</a></li>
-					<li class="nav-item main-nav-item"><a href="#connect">connect</a></li>
+					{% for i in range(0, sections | length) %}
+						<li class="nav-item main-nav-item"><a href="#{{ sections[i]["class_id"] }}">{{ sections[i]["class_id"] }}</a></li>
+					{% endfor %}
 				</ul>
 			</nav>
 		</div>
