--- a/templates/sections/footer.html
+++ b/templates/sections/footer.html
@@ -3,7 +3,7 @@
 
     <div class="footer-wrapper text-center">
         <p>This website is completely free and open-source. You can download it on GitHub.</p>
-        <p>Made with <span class="icon icon-heart inverse-icon icon-heart-footer"></span> by @imstef, @arch</p>
+        <p>Made with <span class="icon icon-heart inverse-icon icon-heart-footer"></span> by @imstef, @miloskostadinovski</p>
     </div>
 
 {% endblock %}
