From now, portfolio item count is dynamically set depending on how many projects are in a given category. This will add on to the grid functionality, which takes that count, and uses it to center projects in the middle. Also, item preview modal now closes on click outside of the modal-wrapper div, and by pressing the ESC key. Made a change to the footer credentials as well.

--- a/templates/sections/portfolio.html.j2
+++ b/templates/sections/portfolio.html.j2
@@ -46,7 +46,7 @@
     <div class="section-content">
         {% set project_numb = [1] %}
         {% for i in range(0, categories | length) %}
-            <div class="portfolio-section" data-numitems="1">
+            <div class="portfolio-section" data-numitems="">
                 {% for j in range(0, data | length) %}
                     {% if categories[i]["category"] == data[j]["category"] %}
                         <div class="column-4">
