--- a/templates/sections/footer.html.j2
+++ b/templates/sections/footer.html.j2
@@ -2,7 +2,7 @@
 {% block body %}
 
     <div class="footer-wrapper text-center">
-        <p>This website is completely free and open-source. You can download it on GitHub.</p>
+        <p>The Moonbow CMS is completely free and open-source. You can download it on GitHub.</p>
         <p>Made with <span class="icon icon-heart inverse-icon icon-heart-footer"></span> by @imstef, @miloskostadinovski</p>
     </div>
 
