--- a/templates/main.html.j2
+++ b/templates/main.html.j2
@@ -2,18 +2,18 @@
 
 {% block body %}
 	
-	<!-- Include navigation file -->
+	{# Include navigation file #}
 	{% include "sections/main_navigation.html.j2" %}
 
-	<!-- Loop thought all dictionaries -->
+	{# Loop thought all dictionaries #}
 	{% for i in range(0, sections | length) %}
-		<!-- Get attributes (dictionary) from rs (list) -->
+		{# Get attributes (dictionary) from rs (list) #}
 		{% set attributes = sections[i] %}	
 
 		<div class="row">
 			<div class="column-12">
 
-				<!-- First section will have class 'first' -->
+				{#  First section will have class 'first' #}
 				{% if i == 0 %}
 					<section class="site-section first" id="{{ attributes["class_id"] }}">
 				{% else %}
@@ -22,18 +22,18 @@
 
 					<div class="section-wrapper">
 
-						<!-- Set path for section template -->
+						{# Set path for section template #}
 						{% set path = 'sections/' + attributes["type"] + ".html.j2" %}
 
 						{% set class_id = attributes["class_id"] %}
 
-						<!-- Include template -->
+						{# Include template #}
 						{% include path %} 
 
 					</div>
 				</section>
 
-				<!-- If last item, do not generate separator (line) -->
+				{# If last item, do not generate separator (line) #}
 				{% if i != sections | length - 1 %}
 					<div class="separator"></div>		
 				{% endif %}
