--- a/templates/header.html.j2
+++ b/templates/header.html.j2
@@ -25,7 +25,8 @@
 
 		<!-- JS Scripts -->
 		<script type="text/javascript" src="{{ url_for('static', filename='js/min/jquery-3.2.1.min.js') }}"></script>
-		<script type="text/javascript" src=" {{ url_for('static', filename='js/main.js') }} "></script>
+		<script type="text/javascript" src=" {{ url_for('static', filename='js/moonbow.js') }} "></script>
+		<script type="text/javascript" src=" {{ url_for('static', filename='js/theme.js') }} "></script>
 
 	</body>
 
