--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -24,6 +24,44 @@ body { font-size: 16px; font-family: "Open Sans", sans-serif, helvetica; font-we
 .display-table { display: table;
   .display-table-cell { display: table-cell; width: 100%; height: 100%; vertical-align: middle; }
 }
+
+input {
+  -webkit-appearance: none;
+  outline: none;
+  text-align: center;
+  font-size: 0.8em;
+  font-weight: 300;
+  letter-spacing: 0.05em;
+  line-height: 1.2em;
+  padding-bottom: 5px;
+}
+
+::-webkit-input-placeholder { /* WebKit, Blink, Edge */
+    color: #E5E5E5;
+}
+:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
+   color: #E5E5E5;
+   opacity: 1;
+}
+::-moz-placeholder { /* Mozilla Firefox 19+ */
+   color: #E5E5E5;
+   opacity: 1;
+}
+:-ms-input-placeholder { /* Internet Explorer 10-11 */
+   color: #E5E5E5;
+}
+::-ms-input-placeholder { /* Microsoft Edge */
+   color: #E5E5E5;
+}
+
+textarea:focus, input:focus{
+    outline: none;
+}
+
+*:focus {
+    outline: none;
+}
+
 .preload * {
   -webkit-transition: none !important;
   -moz-transition: none !important;
@@ -114,5 +152,37 @@ body { font-size: 16px; font-family: "Open Sans", sans-serif, helvetica; font-we
   &:hover { opacity: 1; }
   .icon-heart-footer { opacity: 0.7; @include transition(all, 800ms);
     &:hover { color: #db1111; opacity: 1; }
+  }
+}
+
+// Login page
+.login-bg { background-color: #EEE; }
+.login-wrapper {
+  margin: 150px auto;
+  background: #FFF;
+  padding: 80px;
+  -webkit-box-shadow: 0.5px 0.5px 10px 0px rgba(218,218,218,1);
+  -moz-box-shadow: 0.5px 0.5px 10px 0px rgba(218,218,218,1);
+  box-shadow: 0.5px 0.5px 10px 0px rgba(218,218,218,1);
+  color: #707070;
+
+  .login-form { 
+    .form-group {
+      margin-bottom: 18px;
+      input {
+        border: 0;
+        width: 225px;
+        border-bottom: 1px solid $border_color;
+        @include transition(border-color, 550ms);
+      }
+      input:focus { border-color: #3a85c2; }
+    } 
+
+    .login-text { font-size: 2em; font-weight: 300; margin-bottom: 5px; }
+    .login-description { font-size: 0.9em; font-weight: 300; margin-bottom: 70px; }
+    .login-btn { border: 1px solid $border_color; font-size: 0.8em; line-height: 1.5em; letter-spacing: 0.02em; background-color: #FFF; padding: 5px 15px; margin-top: 15px; font-weight: 300; cursor: pointer; 
+      @include transition(border-color, 550ms);
+      &:hover { border-color: #3a85c2; }
+    }
   }
 }
