--- a/templates/login.html.j2
+++ b/templates/login.html.j2
@@ -8,6 +8,7 @@
 				<div class="login-form display-table-cell">
 					<h1 class="login-text">Moonbow CMS</h1>
 					<h4 class="login-description">Welcome to the login page</h4>
+					
 					<form id="login" action="" method="POST">
 						<div class="form-group">
 							<input type="text" name="username" class="" placeholder="username/email" value={{ request.form.username }}>
@@ -15,6 +16,7 @@
 						<div class="form-group">
 							<input type="password" name="password" class="" placeholder="password" value={{ request.form.password }}>
 						</div>
+						{% include "_messages.html.j2" %}
 				    	<button type="submit" class="login-btn">Login</button>
 					</form>
 					<div class="lost-pw">
