--- a/static/scss/style.scss
+++ b/static/scss/style.scss
@@ -33,7 +33,7 @@ input {
   font-weight: 300;
   letter-spacing: 0.05em;
   line-height: 1.2em;
-  padding-bottom: 5px;
+  padding-bottom: 7px;
 }
 
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
@@ -160,7 +160,7 @@ textarea:focus, input:focus{
 .login-wrapper {
   margin: 150px auto;
   background: #FFF;
-  padding: 80px;
+  padding: 80px 80px 40px 80px;
   -webkit-box-shadow: 0.5px 0.5px 10px 0px rgba(218,218,218,1);
   -moz-box-shadow: 0.5px 0.5px 10px 0px rgba(218,218,218,1);
   box-shadow: 0.5px 0.5px 10px 0px rgba(218,218,218,1);
@@ -179,10 +179,13 @@ textarea:focus, input:focus{
     } 
 
     .login-text { font-size: 2em; font-weight: 300; margin-bottom: 5px; }
-    .login-description { font-size: 0.9em; font-weight: 300; margin-bottom: 70px; }
+    .login-description { font-size: 0.9em; font-weight: 300; margin-bottom: 50px; }
     .login-btn { border: 1px solid $border_color; font-size: 0.8em; line-height: 1.5em; letter-spacing: 0.02em; background-color: #FFF; padding: 5px 15px; margin-top: 15px; font-weight: 300; cursor: pointer; 
       @include transition(border-color, 550ms);
       &:hover { border-color: #3a85c2; }
     }
+    .lost-pw { padding-top: 40px; font-size: 0.7em; color: #808080; }
+    .login-status { border: 1px solid $border_color; font-size: 0.8em; padding: 5px; margin: 20px 0; display: none; }
+    #login { margin-top: 20px; }
   }
 }
