--- a/templates/login.html.j2
+++ b/templates/login.html.j2
@@ -8,17 +8,18 @@
 				<div class="login-form display-table-cell">
 					<h1 class="login-text">Moonbow CMS</h1>
 					<h4 class="login-description">Welcome to the login page</h4>
+					<div class="login-status"></div>
 					<form id="login" action="" method="POST">
 						<div class="form-group">
-							<input type="text" name="username" class="" placeholder="username/email" value={{ request.form.username }}>
+							<input type="text" name="username" class="login-user" placeholder="username/email" value={{ request.form.username }}>
 						</div>
 						<div class="form-group">
-							<input type="password" name="password" class="" placeholder="password" value={{ request.form.password }}>
+							<input type="password" name="password" class="login-pw" placeholder="password" value={{ request.form.password }}>
 						</div>
 				    	<button type="submit" class="login-btn">Login</button>
 					</form>
 					<div class="lost-pw">
-						<span></span>
+						<span>Lost your password? Click <a href="#">here</a>.</span>
 					</div>
 				</div>	
 			</div>
